# graphics_engine

./: .gitignore  AccelerateStructures.cpp  AccelerateStructures.h  BasicGeometry.cpp  BasicGeometry.h  CMakeLists.txt  DrawContext.cpp  DrawContext.h  Drawables.cpp  Drawables.h  Effects.cpp  Effects.h  GLDriver.cpp  GLDriver.h  Main.cpp  Plugins.cpp  Plugins.h  Scene.h  Utility.cpp  Utility.h  Viewer.cpp  Viewer.h
shaders/: ColorFrag.glsl  ColorVert.glsl  ForwardPhongFrag.glsl  ForwardPhongVert.glsl
